--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     },
     "dependencies": {
         "axios": "^0.19.0",
+        "polished": "^3.4.1",
         "react": "16.9.0",
         "react-native": "0.61.0",
         "react-native-gesture-handler": "^1.4.1",
         "react-native-vector-icons": "^6.6.0",
         "react-navigation": "^4.0.10",
         "react-navigation-stack": "^1.9.3",
+        "react-redux": "^7.1.1",
         "reactotron-react-native": "^3.6.4",
         "reactotron-redux": "^3.1.1",
         "reactotron-redux-saga": "^4.2.2",
-        "react-redux": "^7.1.1",
         "redux": "^4.0.4",
         "redux-saga": "^1.1.1",
         "styled-components": "^4.4.0"
